log_app/k8s/log-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: log-app
  ports:
    - port: 5001
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: splunk-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: splunk
  ports:
    - name: web
      port: 8001
      targetPort: 8000
    - name: hec
      port: 8089
      targetPort: 8089
