log_app/k8s/log-app-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: splunk-cluster-ip-service
              servicePort: 8001
          - path: /logapp/?(.*)
            backend:
              serviceName: log-app-cluster-ip-service
              servicePort: 5001
